--- a/views/mobile.hbs
+++ b/views/mobile.hbs
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>Mobile Page</h1>
+    <ul>
+    {{#each mobile}}
+        <li>{{this}}</li>
+    {{/each}}
+    </ul>
 </body>
 </html>
