--- a/views/laptop.hbs
+++ b/views/laptop.hbs
@@ -8,5 +8,15 @@
 </head>
 <body>
     <h1>Laptop Page</h1>
+    <table border="1">
+        <tr>
+            <th>Laptop Brand</th>
+        </tr>
+        {{#each laptop}}
+            <tr>
+             <td>{{this}}</td>
+            </tr>
+        {{/each}}
+    </table>
 </body>
 </html>
